# python_template

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.circleci/: config.yml
python_template/: __init__.py
tests/: test_app.py
